--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<li>Lets imagine a town called SAP-city or sapolis (just stole this idea from metropolis, pardon me , if i pronounce too german) and this town needs an application to have an overview about their upcoming public events. So we have some sort of organizer, where staff members can create new events and see existing events. We thought about maybe even make this overview of the events public, so town citizens are able to see whats happeing in their hometown, as well</li>
 						<li>Then there is this huge institution called Euopean Union with a ton of laws and requirements concerning accessibility such as EU 2016/2102  and the WCAG Guidelines. I dont wanna bother you with that stuff too much.Lets keep things short and say everyone and their mother, maybe even your cat, must be able to access the application.</li>
 						<li>The use of a completely thought throud design language (in case of colorization, contrasts and so on) would be a great start to build a accessible app and by pure chance, SAP Fiori is such a design language and wuld be perfect for our eventmanger</li>
-						<li>so,  lets build the 1.000.000th organizer cause the world doesnt have enough already. Not the hero we needed, but the hero we get</li>
+						<li>so,  lets build the 1.000.000th organizer cause the world doesnt have enough already. Not the hero we needed, but the hero we get :D</li>
 						<li>We developed two eventmangagers, one with react and the ui5web components and one with SAPUI5, both look similiar and have the same functionality</li>
 					</ul>
 				</aside>
@@ -178,9 +178,10 @@
 					</ul>
 				</aside>
 			</section>
-			<section
+			<!--<section
 				data-background-iframe="https://eventmanagersapui5-s0020406424trial.dispatcher.hanatrial.ondemand.com/index.html?hc_reset"
-				data-background-interactive>
+				data-background-interactive>-->
+				<section data-background="img/eventmanagersapui5.png">
 				<div
 					style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: #00bf1c; color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 					<h2 style="color:#fff;">SAPUI5</h2>
@@ -416,7 +417,7 @@
 					</div>
 					<aside class="notes">
 						<ul>
-							<li>So i ran my first test with a chrome extension called landmarks and those were the results</li>
+							<li>So i ran my first test with a chrome extension called landmarks and those were the results :D</li>
 							<li>No, i did not forget to embed one picture</li>
 							<li>In SAPUI5, there are by default some of the landmarks implemented, while in my react appication with the ui5 web components, there werent one at all.</li>
 						</ul>
@@ -459,7 +460,6 @@
 			</section>
 
 			<section data-background="img/green_blank.svg">
-				<h2 class="text-left">Conclusion</h2>
 				<div style="margin-top: 60px;" class="col-container">
 					<div class="col text-left">
 						<h3>SAPUI5 Controls</h3>
