Images are all displayed in the right way

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <section>
                 <h2>UI5con 2019</h2>
-                <img class="pic-center" data-src="img/UI5con.jpg" data-fragment-index="1">
+                <img class="pic-center" data-src="img/ui5con.jpg" data-fragment-index="1">
                 <aside class="notes">
                     <ul>
                         <li>Lets consider this talk as some sort of journey that started at last years UI5con in sankt leon roth</li>
@@ -195,7 +195,7 @@
             <!--<section
 				data-background-iframe="https://eventmanagersapUI5-s0020406424trial.dispatcher.hanatrial.ondemand.com/index.html?hc_reset"
 				data-background-interactive>-->
-            <section data-background="img/eventmanagersapUI5.png">
+            <section data-background="img/eventmanagersapui5.png">
                 <div style="position: absolute; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: #00bf1c; color: #fff; padding: 20px; font-size: 20px; text-align: left;">
                     <h2 style="color:#fff;">SAPUI5</h2>
                 </div>
@@ -234,11 +234,11 @@
                     <div style="margin-top: 60px;" class="col-container">
                         <div style="margin-right: 20px;" class="col">
                             <p>SAPUI5</p>
-                            <img class="no-border" width: "90%" data-src="img/sapUI5-doc.jpg" alt="">
+                            <img class="no-border" width: "90%" data-src="img/sapui5-doc.jpg" alt="">
                         </div>
                         <div class="col fragment">
                             <p>UI5 Web Components</p>
-                            <img class="no-border" width: "90%" data-src="img/UI5webc-doc.jpg" alt="">
+                            <img class="no-border" width: "90%" data-src="img/ui5webc-doc.jpg" alt="">
                         </div>
                     </div>
                     <aside class="notes">
@@ -389,7 +389,7 @@
                     <div style="margin-top: 60px;" class="col-container">
                         <div style="margin-right: 20px;" width="90%" class="col">
                             <p>SAPUI5</p>
-                            <img class="no-border" data-src="img/performance-sapUI5.PNG" alt="">
+                            <img class="no-border" data-src="img/performance-sapui5.PNG" alt="">
                         </div>
                         <div class="col">
                             <p>UI5 Web Components</p>
