--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 things short and say everyone and their mother, maybe even your cat, must be able to access the application.</li>
                             <li>The use of a completely thought throug design language (in case of colorization, contrasts and so on) would be a great start to build a accessible app and by pure chance, SAP Fiori is such a design language and would be perfect
                                 for our eventmanger</li>
-                            <li>so, lets build the 1.000.000th organizer cause the world doesnt have enough already. Not the hero we needed, but the hero we get :D</li>
+                            <li>so, lets build the 1.000.000th organizer cause the world doesnt have enough already. Not the hero we needed, but the hero we get</li>
                             <li>We developed two eventmangagers, one with react and the UI5web components and one with SAPUI5, both look similiar and have the same functionality</li>
                         </ul>
                     </aside>
@@ -185,7 +185,7 @@
                     <h2 style="color:#fff;">React with UI5 Web Components</h2>
                 </div>
                 <aside class="notes">
-                    You can actually interact with the application in this slide :D
+                    You can actually interact with the application in this slide
                     <ul>
                         <li>And this is how it looks like in react with the UI5 Web Components</li>
                         <li>We have our overview page with the new cards (the right one was just for some experimeting with routing, cause they're completely different), we have a table with a detail view, we cann add new events and filter</li>
@@ -421,7 +421,7 @@
                     <aside class="notes">
                         <ul>
                             <li>Next aspect, accessibilty. Very important for our town sapolis</li>
-                            <li>Since web components and SAPUI5 controls are somehow, the same UI-elements, which should both be enterprise ready and have implmented the same standard, I thought I would have equal test results concerning accessibilty</li>
+                            <li>Since web components and SAPUI5 controls are somehow, the same UI-elements, which should both be enterprise ready and have implemented the same standard, I thought I would have equal test results concerning accessibilty</li>
                         </ul>
                     </aside>
                 </section>
@@ -513,7 +513,7 @@
                     <iframe data-src="https://giphy.com/embed/XHVmD4RyXgSjd8aUMb" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                 </a>
                 <aside class="notes">
-                    Thank you for you're attention :)<br> Do you have any questions?<br> If you still have questions, feel free to message us! <br>
+                    Thank you for you're attention <br> Do you have any questions?<br> If you still have questions, feel free to message us! <br>
                     <a href="mailto:f.pipping@advades.com">f.pipping@advades.com</a> <br>
                     <a href="mailto:a.seibel@advades.com">a.seibel@advades.com</a>
                 </aside>
